--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.REQUEST_DELETE_PACKAGES" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-    <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 
 
     <application
@@ -16,10 +15,11 @@
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
-        tools:ignore="AllowBackup"
+        android:theme="@style/Translucent"
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:targetApi="q">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.InstallActivity"
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
             android:enabled="true"
             android:excludeFromRecents="true"
@@ -44,6 +44,32 @@
                 <data android:scheme="package" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activity.LaunchActivity"
+            android:enabled="true"
+            android:exported="true"
+            android:label="@string/launch_name"
+            android:noHistory="true">
+            <intent-filter>
+                <action android:name="android.intent.action.SHOW_APP_INFO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity-alias
+            android:name=".activity.ShowAppInfoActivity"
+            android:exported="false"
+            android:label="@string/app_name"
+            android:targetActivity=".activity.LaunchActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.SHOW_APP_INFO" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity-alias>
+
     </application>
 
 </manifest>
