--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,48 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:manageSpaceActivity=".activity.SettingsActivity"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Translucent"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning"
         tools:targetApi="q">
+        <activity
+            android:name=".activity.SettingsActivity"
+            android:launchMode="singleInstance"
+            android:theme="@style/DeviceDefault.Dialog">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.APPLICATION_PREFERENCES" />
+            </intent-filter>
+        </activity>
+        <activity-alias
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:targetActivity=".activity.SettingsActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity-alias>
+
+        <activity
+            android:name=".activity.NotifyActivity"
+            android:noHistory="true"
+            android:theme="@style/Translucent">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".activity.InstallActivity"
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
@@ -45,12 +81,14 @@
             </intent-filter>
         </activity>
 
+
         <activity
             android:name=".activity.LaunchActivity"
             android:enabled="true"
             android:exported="true"
             android:label="@string/launch_name"
-            android:noHistory="true">
+            android:noHistory="true"
+            android:theme="@style/Translucent">
             <intent-filter>
                 <action android:name="android.intent.action.SHOW_APP_INFO" />
 
@@ -61,7 +99,7 @@
         <activity-alias
             android:name=".activity.ShowAppInfoActivity"
             android:exported="false"
-            android:label="@string/app_name"
+            android:label="@string/launch_name"
             android:targetActivity=".activity.LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SHOW_APP_INFO" />
@@ -69,6 +107,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity-alias>
+
+        <receiver android:name=".receiver.SecretCodeReceiver">
+            <intent-filter>
+                <action android:name="android.provider.Telephony.SECRET_CODE" />
+                <data
+                    android:host="297668"
+                    android:scheme="android_secret_code" />
+            </intent-filter>
+        </receiver>
+
 
     </application>
 
