--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,9 +59,9 @@
             android:configChanges="keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
             android:enabled="true"
             android:excludeFromRecents="true"
-            android:noHistory="true"
             android:theme="@style/DeviceDefault.Dialog">
             <intent-filter>
+                <action android:name="modosa.action.PICK_FILE" />
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.INSTALL_PACKAGE" />
 
